src/objects/Constraints_Criteria__c.object
<CustomObject>
    <description>Constraint Criteria&apos;s for this rule</description>
    <fields>
        <fullName>Condition__c</fullName>
        <description>Condition to be applied on mentioned criteria</description>
        <inlineHelpText>Condition to be applied on mentioned criteria</inlineHelpText>
        <label>Condition</label>
        <picklist>
            <picklistValues>
                <fullName>Equals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater Than</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less Than</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater Than Or Equals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less Than Or Equals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not In</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Constraint_Rule__c</fullName>
        <description>Related Constraint Rule</description>
        <inlineHelpText>Related Constraint Rule</inlineHelpText>
        <label>Constraint Rule</label>
        <referenceTo>Constraint_Rule__c</referenceTo>
        <relationshipLabel>Constraints Criterias</relationshipLabel>
        <relationshipName>Constraints_Criterias</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Criteria__c</fullName>
        <description>Criteria to be chosen for constriant</description>
        <inlineHelpText>Criteria to be chosen for constriant</inlineHelpText>
        <label>Criteria</label>
        <picklist>
            <picklistValues>
                <fullName>Division Count</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Actual Division Count</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>Values for criteria</description>
        <inlineHelpText>Values for criteria</inlineHelpText>
        <label>Value</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>provide_value_from_field__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If value to be compared is taken from salesforce field</description>
        <inlineHelpText>If value to be compared is taken from salesforce field</inlineHelpText>
        <label>provide value from field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>value_from_field__c</fullName>
        <description>field labels from which value can be picked up for comparing crtieria</description>
        <inlineHelpText>field labels from which value can be picked up for comparing crtieria</inlineHelpText>
        <label>value from field</label>
        <picklist>
            <picklistValues>
                <fullName>Division Count</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Actual Division Count</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Constraints Criteria</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Criteria Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Constraints Criterias</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>